--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -109,7 +109,7 @@
                         <label asp-for="Input.PhoneNumber" class="form-label">เบอร์โทรศัพท์</label>
                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    <div class="form-floating mb-3" hidden>
                         <input asp-for="Input.Status" class="form-control" disabled>
                         <label asp-for="Input.Status" class="form-label">อัพโหลดไฟล์</label>
                         <span asp-validation-for="Input.Status" class="text-danger"></span>
