--- a/Views/Admin/StudyResult.cshtml
+++ b/Views/Admin/StudyResult.cshtml
@@ -66,12 +66,13 @@
                 <thead>
                     <tr>
                        
-                        <th>รหัสเทียบวิชา</th>
+                        @* <th>รหัสเทียบวิชา</th> *@
                         <th>รหัสวิชาวิทย์คอม</th>
                         <th>วิชาวิทย์คอม</th>
+                        <th>หน่วยกิต</th>
                         <th>รหัสวิชาปวส.</th>
                         <th>วิชาปวส.</th>
-                        <th>หน่วยกิจ</th>
+                        <th>หน่วยกิต</th>
                         <th>เกรดปวส.</th>
                         <th>ลบ</th>
 
@@ -82,12 +83,14 @@
                     {
                         <tr>
                            
-                            <td>@Model[i].CodeSubtrans</td>
+                            @* <td>@Model[i].CodeSubtrans</td> *@
                             <td>@Model[i].Codesubcs</td>
                             <td>@Model[i].Namethaics</td>
+                            <td>@Model[i].Credits</td>
                             <td>@Model[i].Codesubtra</td>
                             <td>@Model[i].Namethaitra</td>
-                            <td>@Model[i].Credits</td>
+                            <td>@Model[i].Credittra</td>
+                            
                             <td>
                                 @Html.EditorFor(modelItem => modelItem[i].GradeTra)<br />
                                 @Html.ValidationMessageFor(m => m[i].GradeTra, "", new
