--- a/Views/Admin/PairSub.cshtml
+++ b/Views/Admin/PairSub.cshtml
@@ -52,7 +52,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <center><h1 class="w3-xxxlarge">เพิ่มการจับคู่วิชา</h1></center>
+            <center><h1 class="w3-xxxlarge">เพิ่มการจับคู่วิชา <br> @ViewBag.Namecoursecs : @ViewBag.Namecoursetra</br></h1></center>
         </header>
 
         <form method="POST" asp-controller="Admin" asp-action="PairSub" asp-route-Coursecs="@Model.Coursecs" asp-route-Coursetra="@Model.Coursetra" asp-route-CodeCoursetrans="@Model.Data.CodeCoursetran">
@@ -94,7 +94,7 @@
                     <span asp-validation-for="Data.Codetra" class="text-danger"></span>
                 </div>
 
-                
+
             </div>
 
             <button type="submit" class="btn btn-primary my-3">เพิ่ม</button>
