--- a/Views/Admin/TransferSub.cshtml
+++ b/Views/Admin/TransferSub.cshtml
@@ -52,7 +52,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <Center><h1 class="w3-xxxlarge">การเทียบโอนของ @Model.DataTable.FirstOrDefault()?.Namecoursecs - @Model.DataTable.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1 class="w3-xxxlarge">การเทียบโอนของ : @Model.DataTable.FirstOrDefault()?.Namecoursecs - @Model.DataTable.FirstOrDefault()?.Namecoursetra</h1></Center>
         </header>
         
         <table id="example" class="display">
