--- a/Views/Admin/AddCourseCs.cshtml
+++ b/Views/Admin/AddCourseCs.cshtml
@@ -44,7 +44,7 @@
             <div class="row">
 
                 <div class="col-lg-3">
-                    <label asp-for="Namecoursecs">ชื่อหลักสูตรวิทย์คอม</label>
+                    <label asp-for="Namecoursecs">ชื่อหลักสูตรวิทย์คอม<label style="color:red;">( หลักสูตรปี 2560 )</label></label>
                     <input type="text" asp-for="Namecoursecs" class="form-control">
                     <span asp-validation-for="Namecoursecs" class="text-danger"></span>
                 </div>
