--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -20,7 +20,7 @@
                 <form id="profile-form" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
+                        <input asp-for="Username" class="form-control" disabled />
                         <label asp-for="Username" class="form-label">Username</label>
                     </div>
                     <div class="form-floating mb-3">
