--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -100,6 +100,11 @@
                         <span asp-validation-for="Input.Codecoursetra" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
+                        <input asp-for="Input.Email" class="form-control">
+                        <label asp-for="Input.Email" class="form-label">Email</label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
                         <input asp-for="Input.Facebook" class="form-control">
                         <label asp-for="Input.Facebook" class="form-label">Facebook</label>
                         <span asp-validation-for="Input.Facebook" class="text-danger"></span>
